# linear.c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  auto-build  auto_build.sh  build_shaders.sh
examples/: CMakeLists.txt  vector_simple.c
include/: floating_point.h  matrix.h  numeric_types.h  scalar.h  tensor.h  thread.h  vector.h  vk.h
shaders/: vk_matrix_add.comp  vk_vector_add.comp
src/: floating_point.c  matrix.c  numeric_types.c  scalar.c  thread.c  vector.c  vk.c
tests/: test_linear_matrix.c  test_linear_scalar.c  test_linear_shader.comp  test_linear_thread.c  test_linear_vector.c  test_linear_vulkan.c  test_vector.c
